--- a/01_RecyclerCardView/app/src/main/AndroidManifest.xml
+++ b/01_RecyclerCardView/app/src/main/AndroidManifest.xml
@@ -9,10 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".DailyPointActivity">
+
+        </activity>
+        <activity
+            android:name=".PeriodActivity"
+            android:label="@string/title_activity_period"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
